# cosmic-foundry

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AI.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  RESEARCH.md  ROADMAP.md  STATUS.md  pyproject.toml  run_tests.sh
.claude/: settings.json
.claude/agents/: pr-reviewer.md  rigorous-reviewer.md
.claude/commands/: review-pr.md  rigorous-review.yaml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  gpu.yml  secret-scan.yml
adr/: ADR-0001-python-with-runtime-codegen.md  ADR-0002-jax-primary-kernel-backend.md  ADR-0003-jax-distributed-host-parallelism.md  ADR-0003-mpi-baseline.md  ADR-0004-sphinx-myst-docs-stack.md  ADR-0005-branch-pr-attribution-discipline.md  ADR-0006-visualization-stack.md  ADR-0007-replication-workflow.md  ADR-0008-numerical-transcription-discipline.md  ADR-0009-float64-default-precision.md  ADR-0010-kernel-abstraction-model.md  ADR-0011-halo-fill-fence.md  ADR-0012-global-reduction-primitive.md  ADR-0013-derivation-first-lane.md  ADR-0014-platform-application-architecture.md  ADR-0015-reproducibility-meta-generator.md  README.md  adr-template.md  meta-level.md  object-level.md
adr/meta-level/: ADR-0005-branch-pr-attribution-discipline.md  ADR-0007-replication-workflow.md  ADR-0008-numerical-transcription-discipline.md  ADR-0013-derivation-first-lane.md  ADR-0015-reproducibility-meta-generator.md  README.md
adr/object-level/: ADR-0001-python-with-runtime-codegen.md  ADR-0002-jax-primary-kernel-backend.md  ADR-0003-jax-distributed-host-parallelism.md  ADR-0004-sphinx-myst-docs-stack.md  ADR-0006-visualization-stack.md  ADR-0009-float64-default-precision.md  ADR-0010-kernel-abstraction-model.md  ADR-0012-global-reduction-primitive.md  ADR-0016-field-map-formalism.md  README.md
benchmarks/: README.md  laplacian_roofline.py  pointwise_roofline.py
capabilities/: C0001-compressible-euler-cartesian.md  C0004-linear-mode-diagnostic.md  C0005-constant-acceleration-source.md  C0006-helmholtz-eos.md  C0007-aprox-reaction-network.md  C0008-strang-burn-hydro-coupling.md  C0009-ignition-event-diagnostic.md  C0010-forward-gravitational-field.md  C0011-backward-gravitational-field.md  C0012-equation-of-state.md  C0013-gravitational-potential.md  README.md  fields.md  maps.md
cosmic_foundry/: __init__.py  _version.py
cosmic_foundry/cli/: __init__.py  main.py
cosmic_foundry/computation/: __init__.py  _codegen.py  abstract_backend.py  abstract_value.py  algorithm_capabilities.py  array.py  dense_jacobi_solver.py  dense_lu_solver.py  descriptor.py  direct_solver.py  extent.py  factorization.py  field.py  iterative_solver.py  laplacian.py  linear_solver.py  lu_factorization.py  overlap.py  reductions.py  stencil.py  tensor.py  tracing_backend.py
cosmic_foundry/continuous/: __init__.py  atlas.py  boundary_condition.py  chart.py  conservation_law.py  constraint.py  differential_form.py  differential_operator.py  euclidean_metric.py  euclidean_space.py  field.py  flat_manifold.py  identity_chart.py  local_boundary_condition.py  manifold.py  manifold_with_boundary.py  metric_tensor.py  minkowski_metric.py  minkowski_space.py  (+7 more)
derivations/: laplacian_stencil.py
docs/: accessibility.md  capability_atlas.md  coding-standards.md  conf.py  contributing.md  getting-started.md  index.md  manifolds.md
environment/: activate_environment.sh  cosmic_foundry.yml  cosmic_foundry_cuda.yml  setup_environment.sh  versions.yml
pr-review/: README.md  agent.md  architecture-checklist.md  checklist.md
replication/: README.md  formulas.md
research/: 01-frameworks.md  02-grid-codes.md  04-relativistic-codes.md  05-stellar-codes.md  06-11-visualization.md  06-12-licensing.md  06-capabilities.md  07-implications.md  08-vv-methodology.md  index.md
roadmap/: epoch-00-bootstrap.md  epoch-01-kernels.md  epoch-02-mesh.md  epoch-03-platform-services.md  epoch-03-visualization.md  epoch-04-newtonian-hydro.md  epoch-04-visualization.md  epoch-05-newtonian-hydro.md  epoch-06-gravity-nbody.md  epoch-06-mhd.md  epoch-06-microphysics.md  epoch-07-microphysics.md  epoch-08-mhd.md  epoch-08-radiation.md  epoch-09-radiation.md  epoch-09-relativistic.md  epoch-10-relativistic.md  epoch-11-moving-mesh.md  epoch-11-particle-cosmology.md  epoch-12-moving-mesh.md  epoch-13-stellar-evolution.md  epoch-13-subgrid-observables.md  epoch-14-subgrid-observables.md  index.md  meta-level.md  object-level.md  reproducibility-meta-generator.md
scripts/: README.md  _review_pr_impl.sh  activate_environment.sh  agent_health_check.sh  gen_capability_atlas_docs.py  gen_continuous_docs.py  gen_validation_docs.py  generate_kernels.py  install_claude_glue.sh  install_gemini_glue.sh  review_pr_with_claude.sh  review_pr_with_codex.sh  review_pr_with_gemini.sh  setup_environment.sh  start_agent.sh
tests/: _field_placement_worker.py  calibration.py  claims.py  conftest.py  integrator_fixtures.py  parametric_networks.py  selection_ownership.py  structure_atlas.py  test_adaptive_controllers.py  test_algorithm_selection.py  test_autotuning.py  test_boundary_condition.py  test_boundary_conditions.py  test_cartesian_restriction_operator.py  test_chain_complex.py  test_chart_atlas.py  test_convergence.py  test_convergence_helper.py  test_convergence_order.py  test_diagnostics.py  test_differential_form.py  test_differential_operator.py  test_diffusive_flux.py  test_discrete_field.py  test_discrete_operators.py  test_discretization.py  test_discretization_hierarchy.py  test_domain_aware_integration.py  test_execution_plan.py  test_field.py  test_field_allocation.py  test_field_discretization.py  test_field_placement.py  test_generated.py  test_generated_kernels.py  test_generic_bases.py  test_geometry.py  test_halo.py  test_hello.py  test_io.py  (+29 more)
(+284 files in other folders)
