[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cosmic-foundry"
dynamic = ["version"]
description = "A high-performance computational astrophysics engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "jax[cpu]",
    "h5py",
    "click",
    "sympy",
    "typing-extensions",
    "unyt",
]

[project.optional-dependencies]
observational = [
    "requests",
    "jsonschema",
    "pyyaml",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mpl",
    "pytest-timeout",
    "pre-commit",
    "black",
    "ruff",
    "mypy",
    "hypothesis",
    "requests",
    "jsonschema",
    "pyyaml",
    "detect-secrets",
]
mpi = [
    "mpi4py",
    "mpi4jax",
    "pytest-mpi",
]
docs = [
    "sphinx",
    "myst-nb",
    "ipykernel",
    "furo",
    "sphinx-design",
    "sphinx-autodoc2",
    "sphinx-copybutton",
    "cmasher",
    "cmocean",
]
gpu = ["jax[cuda12]"]
numba = ["numba"]
taichi = ["taichi"]
warp = ["warp-lang"]
triton = ["triton"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["cosmic_foundry"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "NPY", # numpy-specific rules
]

# ---------------------------------------------------------------------------
# Mypy (curated strict-ish; full --strict excluded where JAX stubs fall short)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
files = ["cosmic_foundry"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["jax.*", "jaxlib.*", "h5py.*", "unyt.*", "scipy.*", "numpy.*", "sympy.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests", "validation"]
addopts = "-q"
# Session-level timeout (backstop for runaway tests) is set programmatically
# from MAX_WALLTIME_S × BUDGET_TOLERANCE in tests/claims.py via pytest_configure
# in tests/conftest.py.  The per-claim contract (same factor applied to each
# claim's slice of the budget) is enforced inside each claim's check() with a
# precise overshoot message.
timeout_method = "thread"
markers = [
    "offline: opt-in stress tests that are not run by default or required in CI",
    "multihost: requires jax.distributed multi-process setup",
    "visual: pytest-mpl image-comparison tests",
]
filterwarnings = [
    # sympy 1.14 calls mpmath.libmp.bitcount() which mpmath 1.4 deprecated;
    # fixed upstream, filter until sympy cuts a release with the fix.
    "ignore:bitcount function is deprecated:DeprecationWarning:mpmath",
]
